fix(shs-6161): hero spacing

--- a/docroot/themes/humsci/humsci_basic/src/scss/partials/objects/_layouts.general.scss
+++ b/docroot/themes/humsci/humsci_basic/src/scss/partials/objects/_layouts.general.scss
@@ -2,8 +2,12 @@
   @include hb-page-width;
 }
 
+.hb-vertical-page-padding {
+  margin: 0 auto hb-spacing-width();
+}
+
 .hb-vertical-page-padding:not(:has(.hs-full-width)) {
-  margin: hb-spacing-width() auto;
+  margin-top: hb-spacing-width();
 }
 
 // If a component needs *any* additional styles, move the rule into /src/scss/components.
