--- a/docroot/themes/humsci/humsci_basic/src/scss/partials/tools/_mixins.heros.scss
+++ b/docroot/themes/humsci/humsci_basic/src/scss/partials/tools/_mixins.heros.scss
@@ -4,7 +4,7 @@
   // For all themes, if only the hero image is present (no overlay text) or hero wrapper,
   // make sure vertical margin is present on full width layout
   .hs-full-width & {
-    margin-bottom: 2rem;
+    margin: 0 0 hb-spacing-width();
   }
 
   // img element styles should only be applied to the gradient hero
